[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/doctrine_card.gd" id="1_card"]

[node name="DoctrineCard" type="PanelContainer"]
custom_minimum_size = Vector2(220, 0)
size_flags_horizontal = 3
script = ExtResource("1_card")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 6

[node name="NameLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Doctrine Name"
horizontal_alignment = 1

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "[PASSIVE]"

[node name="CostLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
text = "50 RP"
horizontal_alignment = 2

[node name="Sep" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="DescLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Doctrine description goes here."
autowrap_mode = 3

[node name="PrereqLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Requires: None"

[node name="ResearchButton" type="Button" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 32)
text = "Research (50 RP)"

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
text = ""
horizontal_alignment = 1
